--- a/style.css
+++ b/style.css
@@ -20,6 +20,12 @@ h1 {
 	background-color: skyblue;
 	color: white;
 	}
+h4 {
+	text-align: center;
+	background-color: gray;
+	color: white;
+	font-size: 10px;
+}
 input:hover
 {
 background-color: green;
