--- a/style.css
+++ b/style.css
@@ -1,6 +1,21 @@
-<!-- Start the coding for CSS -->
-<style>
-/* Create the Outer layout of the Calculator. */
+
+::-webkit-scrollbar {
+    width: 13px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #212121;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #333333;
+    border-radius: 50px;
+    box-shadow: inset 0 0 3px  gray;
+}
+    ::-webkit-scrollbar-thumb:hover {
+        background-color: #373737;
+    }
+
 .formstyle
 {
 width: 300px;
@@ -13,7 +28,7 @@ text-align: center;
 background-color: grey;
 }
 
-/* Display top horizontal bar that contain some information. */
+
 h1 {
 	text-align: center;
 	padding: 23px;
@@ -36,7 +51,6 @@ margin: 0;
 padding: 0;
 }
 
-/* It is used to create the layout for calculator button. */
 .btn{
 width: 50px;
 height: 50px;
